# forgekit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .mcp.json  .npmrc  ACCESSIBILITY.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  ONBOARDING.md  README.md  RECONCILE.md  ROADMAP.md  RUN.md  SECURITY.md  SUPPORT.md  biome.json  brand.json  install.sh  package-lock.json  package.json  patch-settings.js  tsconfig.json
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
bench/: bench.mjs  impact_cases.mjs
docs/: GUIDE.md  RELEASING.md  REPO_REVIEW.md
examples/: README.md  cortex-demo.mjs  rules.override.json
global/: CLAUDE.md  settings.template.json  statusline.sh
research/python-prototypes/impact_oracle/: README.md  demo.py  evaluate.py  pyproject.toml  requirements.txt
research/python-prototypes/impact_oracle/demo_package/: __init__.py  inventory.py  models.py  orders.py  reports.py
research/python-prototypes/impact_oracle/demo_package/sub/: __init__.py  pricing.py
research/python-prototypes/impact_oracle/demo_package/utils/: formatting.py  validation.py
research/python-prototypes/impact_oracle/impact_oracle/: __init__.py  cli.py  mcp_server.py  oracle.py  parser.py  serialization.py  world_model.py
research/python-prototypes/impact_oracle/tests/: test_demo_package.py
research/python-prototypes/router_gate/: README.md  conftest.py  demo.py  eval_results.json  evaluate.py  pyproject.toml  router-gate.example.toml
research/python-prototypes/router_gate/router_gate/: __init__.py  cli.py  config.py  executors.py  gate.py  mcp_server.py  pipeline.py  pricing.py  router.py  serialization.py  taskset.py
research/python-prototypes/router_gate/tests/: test_router_gate.py
(+501 files in other folders)
