[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-oracle"
version = "0.2.0"
description = "Codebase world-model and impact blast-radius oracle for Python repositories"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "impact_oracle authors" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["networkx>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[project.scripts]
impact-oracle = "impact_oracle.cli:main"
impact-oracle-mcp = "impact_oracle.mcp_server:main"

[tool.setuptools.packages.find]
include = ["impact_oracle*"]
